--- a/PortfolioAce/Views/Windows/AboutWindow.xaml
+++ b/PortfolioAce/Views/Windows/AboutWindow.xaml
@@ -66,7 +66,7 @@
             </Grid.ColumnDefinitions>
 
             <TextBlock Grid.Column="0" Grid.Row="0" VerticalAlignment="Center" Text="Version: " />
-            <Label Content="0.9.0 beta" Grid.Column="1" Grid.Row="0" />
+            <Label Content="Pre-alpha" Grid.Column="1" Grid.Row="0" />
         </Grid>
 
         <!-- Additional Notes -->
