filter security price information by assetclass

--- a/PortfolioAce/Views/SystemSecurityPricesView.xaml
+++ b/PortfolioAce/Views/SystemSecurityPricesView.xaml
@@ -42,6 +42,16 @@
         </DataGrid>
         <DockPanel Grid.Row="2" LastChildFill="False">
             <WrapPanel DockPanel.Dock="Top">
+                <TextBlock Text="Asset Class: " FontWeight="Bold" Margin="0,6,0,0"/>
+                <ComboBox ItemsSource="{Binding cmbAssetClasses}" Margin="10,0,0,0" SelectedItem="{Binding Path=AssetClass, UpdateSourceTrigger=PropertyChanged}" Width="100" MaxWidth="100" >
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding }" FontWeight="Bold"/>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
+            </WrapPanel>
+            <WrapPanel DockPanel.Dock="Top">
                 <TextBlock Text="Security: " FontWeight="Bold" Margin="0,6,0,0"/>
                 <ComboBox ItemsSource="{Binding cmbSecurities}" Margin="10,0,0,0" SelectedItem="{Binding Path=Symbol, UpdateSourceTrigger=PropertyChanged}" Width="100" MaxWidth="100" >
                     <ComboBox.ItemTemplate>
