--- a/PortfolioAce/Views/HomeView.xaml
+++ b/PortfolioAce/Views/HomeView.xaml
@@ -40,7 +40,19 @@
             </DataGrid.Columns>
         </DataGrid>
         <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="1" Grid.RowSpan="2">
-            <materialDesign:Card Padding="10" Margin="20">
+            <materialDesign:Card Padding="10" Margin="20" Name="IntroductionCard">
+                
+                <materialDesign:Card.Style>
+                    <Style TargetType="materialDesign:Card">
+                        <Setter Property="Visibility" Value="Collapsed"/>
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding CurrentCard, UpdateSourceTrigger=PropertyChanged}" Value="0">
+                                <Setter Property="Visibility" Value="Visible"/>
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </materialDesign:Card.Style>
+                
                 <Grid >
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
@@ -52,8 +64,13 @@
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-
-                    <Image
+                    <TextBlock Text="Next" HorizontalAlignment="Right" FontWeight="Bold" Foreground="DarkGray" FontStyle="Italic" Cursor="Hand">
+                        <TextBlock.InputBindings>
+                            <MouseBinding MouseAction="LeftClick" 
+                                              Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type local:HomeView}},Path=DataContext.NextCardCommand}"/>
+                        </TextBlock.InputBindings>
+                    </TextBlock>
+                        <Image
                                 Source="/PortfolioAce;component/Resources\portfolioace_logo2_hd.png"
                                 Grid.RowSpan="1"
                                 Width="125"
@@ -61,7 +78,7 @@
                                 StretchDirection="Both"
                                 VerticalAlignment="Center"
                                 Stretch="UniformToFill"/>
-                    <WrapPanel Orientation="Vertical" Grid.Row="1" Grid.Column="0" Margin="16 0 16 8" MaxWidth="200">
+                    <WrapPanel Orientation="Vertical" Grid.Row="1" Grid.Column="0" Margin="16 0 16 8" Width="200">
                         <TextBlock TextWrapping="Wrap" Foreground="{DynamicResource MaterialDesignBodyLight}"
                                 VerticalAlignment="Center"
                                HorizontalAlignment="Left">
@@ -129,6 +146,108 @@
                             </StackPanel>
                         </Grid>
                     </Border>
+                </Grid>
+            </materialDesign:Card>
+            <materialDesign:Card Padding="10" Margin="20" Name="EconomicCalendarCard">
+                
+                <materialDesign:Card.Style>
+                    <Style TargetType="materialDesign:Card">
+                        <Setter Property="Visibility" Value="Collapsed"/>
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding CurrentCard, UpdateSourceTrigger=PropertyChanged}" Value="1">
+                                <Setter Property="Visibility" Value="Visible"/>
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </materialDesign:Card.Style>
+                
+                <Grid >
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Text="Previous" HorizontalAlignment="Left" FontWeight="Bold" Foreground="DarkGray" FontStyle="Italic" Cursor="Hand">
+                        <TextBlock.InputBindings>
+                            <MouseBinding MouseAction="LeftClick" 
+                                              Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type local:HomeView}},Path=DataContext.PreviousCardCommand}"/>
+                        </TextBlock.InputBindings>
+                    </TextBlock>
+                    <TextBlock Text="Next" HorizontalAlignment="Right" FontWeight="Bold" Foreground="DarkGray" FontStyle="Italic" Cursor="Hand">
+                        <TextBlock.InputBindings>
+                            <MouseBinding MouseAction="LeftClick" 
+                                              Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type local:HomeView}},Path=DataContext.NextCardCommand}"/>
+                        </TextBlock.InputBindings>
+                    </TextBlock>
+                    <Image
+                                Source="/PortfolioAce;component/Resources\stlouisfed_logo.png"
+                                Grid.RowSpan="1"
+                                Width="125"
+                                MaxWidth="150"
+                                StretchDirection="Both"
+                                VerticalAlignment="Center"
+                                Stretch="UniformToFill"
+                                Margin="0,50,0,30"/>
+                    <WrapPanel Orientation="Vertical" Grid.Row="1" Grid.Column="0" Margin="16 0 16 8" Width="200">
+                        <TextBlock TextWrapping="Wrap" Foreground="{DynamicResource MaterialDesignBodyLight}"
+                                VerticalAlignment="Center"
+                               HorizontalAlignment="Left">
+                            Economic Calendar  Support coming soon!
+                        </TextBlock>
+                    </WrapPanel>
+                </Grid>
+            </materialDesign:Card>
+            <materialDesign:Card Padding="10" Margin="20" Name="StockTwitsCard">
+                
+                <materialDesign:Card.Style>
+                    <Style TargetType="materialDesign:Card">
+                        <Setter Property="Visibility" Value="Collapsed"/>
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding CurrentCard, UpdateSourceTrigger=PropertyChanged}" Value="2">
+                                <Setter Property="Visibility" Value="Visible"/>
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </materialDesign:Card.Style>
+                
+                <Grid >
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Text="Previous" HorizontalAlignment="Left" FontWeight="Bold" Foreground="DarkGray" FontStyle="Italic" Cursor="Hand">
+                        <TextBlock.InputBindings>
+                            <MouseBinding MouseAction="LeftClick" 
+                                              Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type local:HomeView}},Path=DataContext.PreviousCardCommand}"/>
+                        </TextBlock.InputBindings>
+                    </TextBlock>
+                    <Image
+                                Source="/PortfolioAce;component/Resources\Stocktwits-logo.png"
+                                Grid.RowSpan="1"
+                                Width="125"
+                                MaxWidth="150"
+                                StretchDirection="Both"
+                                VerticalAlignment="Center"
+                                Stretch="UniformToFill"
+                                Margin="0,50,0,30"/>
+                    <WrapPanel Orientation="Vertical" Grid.Row="1" Grid.Column="0" Margin="16 0 16 8" Width="200">
+                        <TextBlock TextWrapping="Wrap" Foreground="{DynamicResource MaterialDesignBodyLight}"
+                                VerticalAlignment="Center"
+                               HorizontalAlignment="Left">
+                            StockTwits API Support coming soon!
+                        </TextBlock>
+                    </WrapPanel>
                 </Grid>
             </materialDesign:Card>
         </StackPanel>
