--- a/PortfolioAce/Views/Modals/InvestorManagerWindow.xaml
+++ b/PortfolioAce/Views/Modals/InvestorManagerWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="PortfolioAce.Views.Modals.AddInvestorWindow"
+﻿<Window x:Class="PortfolioAce.Views.Modals.InvestorManagerWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
