--- a/PortfolioAce/Views/Modals/InvestorManagerWindow.xaml
+++ b/PortfolioAce/Views/Modals/InvestorManagerWindow.xaml
@@ -93,8 +93,58 @@
                             </DataTemplate>
                         </ListBox.ItemTemplate>
                     </ListBox>
+                    <DockPanel Grid.Row="0" Grid.Column="1" Margin="2,2,0,0">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="100"/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                            </Grid.RowDefinitions>
+                            <DockPanel Grid.Column="0" Grid.Row="0">
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="115"/>
+                                        <ColumnDefinition/>
+                                    </Grid.ColumnDefinitions>
+                                    <Border BorderBrush="DarkGray" BorderThickness="1">
+                                        <Image Source="/PortfolioAce;component/Resources\generic_avatar_placeholder.png" Grid.Column="0" Width="100" MaxWidth="115" StretchDirection="Both" VerticalAlignment="Center" Stretch="UniformToFill"/>
+                                    </Border>
+                                    <StackPanel Grid.Column="1" Orientation="Vertical" Margin="10,0,0,0">
+                                        <Label Content="{Binding SelectedInvestor.FullName}" FontSize="26" Foreground="DeepSkyBlue" FontWeight="SemiBold"/>
+                                        <TextBlock Text="{Binding InvestorProfile, UpdateSourceTrigger=PropertyChanged}" FontSize="14" TextWrapping="Wrap"/>
+                                    </StackPanel>
+                                </Grid>
+                            </DockPanel>
+                            <StackPanel Grid.Row="1" Orientation="Horizontal">
+                                <Image Source="/PortfolioAce;component/Resources\icons8-date-of-birth-24.png" Width="50" Margin="10"/>
+                                <Label Content="{Binding SelectedInvestor.BirthDate, StringFormat={}{0:dd/MM/yyyy}}" FontSize="16" Margin="0,10,0,0"/>
+                            </StackPanel>
+                            <StackPanel Grid.Row="2" Orientation="Horizontal">
+                                <Image Source="/PortfolioAce;component/Resources\icons8-email-24.png" Width="50" Margin="10"/>
+                                <Label Content="{Binding SelectedInvestor.Email}" FontSize="16" Margin="0,10,0,0"/>
+                            </StackPanel>
+                            <StackPanel Grid.Row="3" Orientation="Horizontal">
+                                <Image Source="/PortfolioAce;component/Resources\icons8-mobile-24.png" Width="50" Margin="10"/>
+                                <Label Content="{Binding SelectedInvestor.MobileNumber}" FontSize="16" Margin="0,10,0,0"/>
+                            </StackPanel>
+                            <StackPanel Grid.Row="4" Orientation="Horizontal">
+                                <Image Source="/PortfolioAce;component/Resources\icons8-communication-24.png" Width="50" Margin="10"/>
+                                <Label Content="{Binding SelectedInvestor.NativeLanguage}" FontSize="16" Margin="0,10,0,0"/>
+                            </StackPanel>
+                            <Border BorderBrush="LightGray" BorderThickness="0,3,0,0" Grid.Row="5" >
+                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                                    <Button Margin="0,0,30,0" Content="Edit Investor Details" FontSize="12" Style="{DynamicResource MaterialDesignFlatDarkBgButton}"/>
+                                    <Button Margin="0,0,9,0" Content="Delete Investor" FontSize="12" Style="{DynamicResource MaterialDesignFlatDarkBgButton}"/>
+                                </StackPanel>
+                            </Border>
+                        </Grid>
+                    </DockPanel>
+                    <!--
                     <StackPanel Grid.Row="0" Grid.Column="1">
-                        <Label Content="{Binding InvestorProfile,UpdateSourceTrigger=PropertyChanged}"/>
+                        <Label Content="{Binding InvestorProfile, UpdateSourceTrigger=PropertyChanged}"/>
                         <Label Content="{Binding SelectedInvestor.BirthDate, StringFormat={}{0:dd/MM/yyyy}}"/>
                         <Label Content="{Binding SelectedInvestor.FullName}"/>
                         <Label Content="{Binding SelectedInvestor.Domicile}"/>
@@ -102,6 +152,7 @@
                         <Label Content="{Binding SelectedInvestor.MobileNumber}"/>
                         <Label Content="{Binding SelectedInvestor.NativeLanguage}"/>
                     </StackPanel>
+                    -->
                 </Grid>
             </TabItem>
         </TabControl>
